feat: add grafana alloy to export execution clients metrics (#22)
* feat: add grafana alloy service configurations for various execution clients

* feat: add environment variable support for prometheus configuration in setup_node.py

* feat: refactor run_kute.py to add environment variable handling for prometheus

* feat: update alloy configurations to use environment variables for metrics and logging

* feat: add instance environment variable to docker-compose files for execution clients

* fix: update alloy config to use correct environment variable names for labels

--- a/scripts/besu/docker-compose.yaml
+++ b/scripts/besu/docker-compose.yaml
@@ -44,6 +44,17 @@ services:
       options:
         max-size: 10m
         max-file: "10"
+    labels:
+      metrics_enabled: "true"
+      metrics_port: "8008"
+      logs_enabled: "false"
+      instance: "${GA_METRICS_LABELS_INSTANCE}"
+  alloy:
+    environment:
+      METRICS_LABELS_EXECUTION_CLIENT: "besu"
+    extends:
+      file: ../addons/alloy/compose.yaml
+      service: alloy
 networks:
   gas:
     name: gas-network
