--- a/scripts/reth/docker-compose.yaml
+++ b/scripts/reth/docker-compose.yaml
@@ -53,6 +53,18 @@ services:
       options:
         max-size: 10m
         max-file: "10"
+    labels:
+      metrics_enabled: "true"
+      metrics_port: "8008"
+      logs_enabled: "false"
+      instance: "${GA_METRICS_LABELS_INSTANCE}"
+  alloy:
+    environment:
+      METRICS_LABELS_EXECUTION_CLIENT: "reth"
+      METRICS_ENDPOINT_PATH: "/debug/metrics/prometheus"
+    extends:
+      file: ../addons/alloy/compose.yaml
+      service: alloy
 networks:
   gas:
     name: gas-network
