--- a/images.yaml
+++ b/images.yaml
@@ -4,4 +4,4 @@ images:
   reth: "ethpandaops/reth:performance"
   erigon: "ethpandaops/erigon:performance"
   besu: "ethpandaops/besu:performance"
-  nimbus: "statusim/nimbus-eth1:master"
+  nimbus: "statusim/nimbus-eth1:performance"
