--- a/scripts/nimbus/docker-compose.yaml
+++ b/scripts/nimbus/docker-compose.yaml
@@ -28,6 +28,7 @@ services:
       - --metrics-address=0.0.0.0
       - --metrics-port=8008
       - --engine-api=true
+      - --max-peers=0
       - --jwt-secret=/tmp/jwt/jwtsecret
       - --engine-api-port=8551
       - --engine-api-address=0.0.0.0
