--- a/images.yaml
+++ b/images.yaml
@@ -1,5 +1,6 @@
 images:
   nethermind: "ethpandaops/nethermind:performance"
+  nethermind-modexp: "nethermindeth/nethermind:performance-repriced"
   geth: "ethpandaops/geth:performance"
   reth: "ethpandaops/reth:performance"
   erigon: "ethpandaops/erigon:performance"
