--- a/images.yaml
+++ b/images.yaml
@@ -1,8 +1,7 @@
 images:
-  nethermind: "ethpandaops/nethermind:performance"
-  nethermind-modexp: "nethermindeth/nethermind:performance-repriced"
-  geth: "ethpandaops/geth:performance"
-  reth: "ethpandaops/reth:performance"
-  erigon: "ethpandaops/erigon:performance"
-  besu: "ethpandaops/besu:performance"
-  nimbus: "statusim/nimbus-eth1:performance"
+  nethermind: "ethpandaops/nethermind:performance-modexp"
+  geth: "ethpandaops/geth:performance-modexp"
+  reth: "ethpandaops/reth:performance-modexp"
+  erigon: "ethpandaops/erigon:performance-modexp"
+  besu: "ethpandaops/besu:performance-modexp"
+  nimbus: "ethpandaops/nimbus-eth1:performance-modexp"
