--- a/.github/workflows/multi-parallel.yml
+++ b/.github/workflows/multi-parallel.yml
@@ -138,6 +138,7 @@ jobs:
               echo "Using provided warm up file: ${{ github.event.inputs.warmup }}"
               python3 run_kute.py --output results --testsPath "$test_dir" --jwtPath /tmp/jwtsecret --warmupPath ${{ github.event.inputs.warmup }} --client $client --run $run
             fi
+            python3 -c "from utils import print_computer_specs; print_computer_specs()" > results/computer_specs.txt
             cl_name=$(echo "$client" | cut -d '_' -f 1)
             cd "scripts/$cl_name"
             docker compose down
