--- a/.github/workflows/multi-parallel.yml
+++ b/.github/workflows/multi-parallel.yml
@@ -18,7 +18,6 @@ on:
       client:
         description: 'Comma-separated list of client names'
         default: 'nethermind,geth,reth,besu,erigon'
-        required: true
       runs:
         description: 'Number of runs for the application'
         default: 15
@@ -26,7 +25,7 @@ on:
         description: 'JSON map of images for the clients'
         default: '{"nethermind":"default","geth":"default","reth":"default","erigon":"default","besu":"default"}'
       opcodes_warmup_count:
-        description: 'Number of opcode‐warmup iterations'
+        description: 'Number of opcode-warmup iterations'
         default: 2
       filter:
         description: 'Comma-separated include-only filename patterns'
@@ -36,46 +35,29 @@ on:
         default: 'false'
 
 jobs:
-  set-matrix:
-    runs-on: ubuntu-latest
-    outputs:
-      matrix: ${{ steps.set-matrix.outputs.matrix }}
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with: { python-version: 3.x }
-
-      - name: Build a client-only matrix
-        id: set-matrix
-        run: |
-          clients="${{ github.event.inputs.client }}"
-          IFS=',' read -ra client_array <<< "$clients"
-          matrix_items=()
-          for client in "${client_array[@]}"; do
-            matrix_items+=("{\"client\":\"$client\"}")
-          done
-          matrix="{\"include\":[${matrix_items[*]}]}"
-          echo "::set-output name=matrix::$matrix"
-
   build:
-    needs: set-matrix
     runs-on: ubuntu-latest
+
+    # Inline the matrix by splitting the `client` input on commas
     strategy:
-      matrix: ${{ fromJSON(needs.set-matrix.outputs.matrix) }}
+      fail-fast: false
+      matrix:
+        client: ${{ fromJson('["' + join(split(github.event.inputs.client, ','), '","') + '"]') }}
 
     env:
       DOTNET_INSTALL_DIR: "~/.dotnet"
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      - uses: actions/setup-python@v5
-        with: { python-version: '3.10' }
-
+      - name: Setup Python & .NET
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
       - uses: actions/setup-dotnet@v4
-        with: { dotnet-version: '9.0.x' }
+        with:
+          dotnet-version: '9.0.x'
 
       - name: Make run.sh executable
         run: chmod +x ./run.sh
@@ -95,47 +77,40 @@ jobs:
         run: |
           zip -r results-${{ matrix.client }}.zip results warmupresults logs reports
 
-      - name: Upload artifact
+      - name: Upload artifact for ${{ matrix.client }}
         uses: actions/upload-artifact@v4
         with:
           name: results-${{ matrix.client }}
           path: results-${{ matrix.client }}.zip
-          
+
   combine-results:
     needs: build
     runs-on: ubuntu-latest
     env:
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
-        with: { python-version: '3.10' }
+        with:
+          python-version: '3.10'
 
-      - uses: actions/download-artifact@v4
+      - name: Download all client artifacts
+        uses: actions/download-artifact@v4
         with:
           path: combined-results
           merge-multiple: true
 
-      - name: Extract each client ZIP into its own folder
-        run: |
-          mkdir -p extracted
-          for zip in combined-results/*.zip; do
-            client=$(basename "$zip" .zip)
-            mkdir -p "extracted/$client"
-            unzip -q "$zip" -d "extracted/$client"
-          done
-
-      - name: Consolidate all client-results into merged-results
+      - name: Extract & merge client results
         run: |
           mkdir -p merged-results
-          # Copy every client’s results/ into merged-results/
-          for d in extracted/*; do
-            if [ -d "$d/results" ]; then
-              cp -r "$d/results/." merged-results/
-            fi
+          for z in combined-results/*.zip; do
+            tmp=$(mktemp -d)
+            unzip -q "$z" -d "$tmp"
+            cp -r "$tmp/results/." merged-results/
           done
 
-      - name: Run table & HTML reports over merged-results
+      - name: Generate reports
         run: |
           python3 report_tables.py \
             --resultsPath merged-results \
@@ -151,7 +126,7 @@ jobs:
             --runs "${{ github.event.inputs.runs }}" \
             --images '${{ github.event.inputs.images }}'
 
-      - name: Optionally generate TXT report
+      - name: (Optional) TXT report
         if: ${{ github.event.inputs.txt_report == 'true' }}
         run: |
           python3 report_txt.py \
@@ -162,7 +137,7 @@ jobs:
       - name: Zip final reports
         run: zip -r reports.zip reports
 
-      - name: Upload artifact
+      - name: Upload combined reports
         uses: actions/upload-artifact@v4
         with:
           name: reports
@@ -178,24 +153,15 @@ jobs:
       DB_PASSWORD: ${{ secrets.PERFNET_0_DB_PASSWORD }}
     steps:
       - uses: actions/checkout@v4
-      
       - uses: actions/setup-python@v5
         with:
           python-version: '3.10'
 
-      - name: Install python dependencies for submodule
-        run: |
-          pip install -r requirements.txt
-
-      - uses: actions/download-artifact@v4
+      - name: Download and extract combined reports
+        uses: actions/download-artifact@v4
         with:
-          path: combined-results # Download artifacts from previous jobs
-          merge-multiple: true
-
-      - name: Extract all result files
-        run: |
-          mkdir -p extracted-results
-          find combined-results -name '*.zip' -exec unzip -o {} -d extracted-results \;
+          path: extracted
+          name: reports
 
       - name: Populate Benchmark DB
         run: |
@@ -207,4 +173,4 @@ jobs:
             --table-name gas_benchmarks_ci \
             --db-password "${{ env.DB_PASSWORD }}" \
             --log-level DEBUG \
-            --reports-dir 'extracted-results/reports/'
+            --reports-dir 'extracted/reports/'
