--- a/.github/workflows/multi-parallel.yml
+++ b/.github/workflows/multi-parallel.yml
@@ -113,6 +113,11 @@ jobs:
         with:
           python-version: '3.10'
 
+      - name: Install python dependencies
+        run: |
+          pip install --upgrade pip
+          pip install -r requirements.txt
+
       - name: Download all client artifacts
         uses: actions/download-artifact@v4
         with:
