--- a/.github/workflows/multi-parallel.yml
+++ b/.github/workflows/multi-parallel.yml
@@ -223,7 +223,7 @@ jobs:
             --db-port ${{ env.DB_PORT }} \
             --db-user ${{ env.DB_USER }} \
             --db-name monitoring \
-            --table-name gas_limit_ci \
+            --table-name gas_benchmarks_ci \
             --db-password "${{ env.DB_PASSWORD }}" \
             --log-level DEBUG \
             --reports-dir 'extracted-results/reports/'
