fixes, defaults,ethrex

--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,4 @@ scripts/besu/zkevmgenesis.json filter=lfs diff=lfs merge=lfs -text
 scripts/reth/zkevmgenesis.json filter=lfs diff=lfs merge=lfs -text
 scripts/erigon/zkevmgenesis.json filter=lfs diff=lfs merge=lfs -text
 scripts/nimbus/zkevmgenesis.json filter=lfs diff=lfs merge=lfs -text
+scripts/ethrex/zkevmgenesis.json filter=lfs diff=lfs merge=lfs -text
