Change ethrex image to unstable to benchmark the latest code updates

--- a/images.yaml
+++ b/images.yaml
@@ -5,4 +5,4 @@ images:
   erigon: "ethpandaops/erigon:performance"
   besu: "ethpandaops/besu:performance"
   nimbus: "statusim/nimbus-eth1:performance"
-  ethrex: "ghcr.io/lambdaclass/ethrex:latest"
+  ethrex: "ghcr.io/lambdaclass/ethrex:unstable"
